refactor: consolidate factuscodes DTOs and rename establishments to singular
  - Rename establishments package to establishment (singular) across all modules
  - Move municipality DTOs from municipality.dto to factuscodes.dto package
  - Rename UnitMeasureFileDto to UnitMeasureResponseDto for consistency
  - Add loadMunicipalities() method to FactusCodesService with caching
  - Add municipalities field to FactusCodesResponseDto
  - Simplify imports (use wildcard for factuscodes.dto imports)
  - Replace deprecated Collectors.toList() with Stream.toList() (Java 16+)
  - Remove unused imports (UUID, LocalDate, BigDecimal, etc.)
  - Remove expectedAudience from FactusProperties